使用工厂设计模式，完成一键替换皮肤功能 创建GameFactory工厂类 创建tank，bullet，explode抽象类 创建具体的皮肤主题工厂（继承GameFactory工厂类） 具体的皮肤主题工厂生产已继承了各抽象类的实例